# mkrtetroid

./: .gitignore  CMakeLists.txt  README.md  buffer_definition.c  main.c  mkr_tetroid.h  mkr_tetroid_buffer.h  mkr_tetroid_console_out.h
.github/workflows/: cmake.yml
CMakeModules/: CatchAddTests.cmake
src/: clear_screen.c  draw_tetrimino.c  finalize_screen.c  initialize_screen.c  main.c  mkr_tetroid.c  mkr_tetroid.h  mkr_tetroid_buffer.h  mkr_tetroid_tetrimino.h  mkr_tetroid_utils.h  print_char.c  read_inputs.c  refresh_screen.c  tetrimino_rotate_clockwise.c  tetrimino_rotate_counterclockwise.c
src/tests/: CMakeLists.txt  draw_tetrimino_test.cxx  get_tetrimino_attrib_test.cxx  getbit_test.cxx  mkr_tetroid_game_stub.hxx  test_config.cxx
